Fix view overflow on mobile browsers

--- a/server/static/gastrak.css
+++ b/server/static/gastrak.css
@@ -1,11 +1,12 @@
 body {
     padding: 0;
     margin: 0;
+    overflow: hidden;
 }
 
 #map {
-    height: 100vh;
-    width: 100vw;
+    height: 100dvh;
+    width: 100dvw;
 }
 
 #history {
